# OK_projekt_indywidualny

./: CMakeLists.txt  generuj_inputy.py  graf.txt  main.cpp  uruchamianie.ps1  wyniki.py
inputs/: 100_in.json  10_in.json  11_in.json  12_in.json  13_in.json  20_in.json  25_in.json
times/: 10_time_brute-force.json  12_time_genetic.json  13_time_brute-force.json  20_time_genetic.json  25_time_genetic.json  30_time_genetic.json  8_time_genetic.json
